name:                groundhog-postgres-snap
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          mattraibert@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Snap.Snaplet.Groundhog.Postgresql
  other-extensions:    OverloadedStrings, ViewPatterns, PackageImports, ScopedTypeVariables, FlexibleContexts

  build-depends:
    base                 >=4.7 && <4.8,
    monad-logger         >=0.3 && <0.4,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    snap,
    bytestring           >=0.10 && <0.11,
    configurator         >=0.2 && <0.3,
    resource-pool        >=0.2 && <0.3,
    text                 >=1.1 && <1.2,
    groundhog            >=0.5 && <0.6,
    groundhog-postgresql >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010