name:                groundhog-postgres-snap
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          mattraibert@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Snap.Snaplet.Groundhog.Postgresql
  other-extensions:    OverloadedStrings, ViewPatterns, PackageImports, ScopedTypeVariables, FlexibleContexts

  build-depends:
    base                 >=4.7,
    monad-logger         >=0.3,
    MonadCatchIO-transformers >= 0.2.1,
    snap,
    bytestring           >=0.10,
    configurator         >=0.2,
    resource-pool        >=0.2,
    text                 >=1.1,
    groundhog            >=0.5,
    groundhog-postgresql >=0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
